[package]
name = "teemo"
version = "0.1.2-beta.1"
edition = "2021"
authors = ["urnotzane <urnotzane@gmail.com>"]
description = "A League of Legends API wrapper for Rust"
repository = "https://github.com/urnotzane/teemo.git"
license = "MIT"
keywords = ["LOL", "riot", "LCU"]
exclude = [
  ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.0.0"
native-tls = "0.2.11"
reqwest = {version = "0.11.22", features = ["json"]}
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
url = "2.5.0"
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"] }
base64 = "0.21.5"
futures-util = "0.3.29"
async-recursion = "1.0.5"
